--- a/client/src/componenents/Footer/Footer.module.css
+++ b/client/src/componenents/Footer/Footer.module.css
@@ -17,13 +17,14 @@
   margin: 0.5rem 0;
   font-size: 3rem;
   padding: 1rem;
-  color: var(--blue);
+  color: var(--primary-text-color);
 }
 
 .copyright {
   text-align: center;
+  font-size: small;
   padding: 0.5rem 1rem;
-  color: var(--blue);
+  color: var(--primary-text-color);
 }
 
 @media screen and (max-width: 600px) {
