--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,11 +4,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,400;1,600&display=swap");
 
 :root {
-  --primary-text-color: #b8b8c0;
-  --blue: #007cc7;
+  --primary-text-color: #E8EEFA;
+  --blue: #006EDE;
   --light-blue: #4da8da;
-  --dark-grey-blue: #203647;
-  --black: #12232e;
+  --dark-grey-blue: #0F2247;
+  --black: #182031;
   --transparent-light-blue: rgba(77, 168, 218, 0.5);
   --transparent-blue: rgba(0, 124, 199, 0.5);
 }
