removed unused codes

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -70,6 +70,7 @@ input:-webkit-autofill:hover,
 input:-webkit-autofill:focus, 
 input:-webkit-autofill:active
 {
+  box-shadow: 0 0 0 30px var(--dark-grey-blue) inset !important;
  -webkit-box-shadow: 0 0 0 30px var(--dark-grey-blue) inset !important;
  -webkit-text-fill-color: var(--primary-text-color);
 }
