--- a/client/src/componenents/Hero/Hero.module.css
+++ b/client/src/componenents/Hero/Hero.module.css
@@ -3,15 +3,15 @@
   flex-direction: column;
   justify-content: center;
   height: 80vh;
-  min-height: 70vh;
+  min-height: 900%;
   max-height: 1800px;
-  padding: 3rem 1rem;
+  padding: 1rem 1rem 4rem;
   text-align: left;
   color: var(--primary-text-color);
 }
 
 .hero h1 {
-  font-size: 2.5rem;
+  font-size: clamp(40px, 8vw, 80px);
   font-family: "Quicksand", sans-serif;
 }
 
@@ -24,7 +24,7 @@
 }
 
 .name {
-  padding: 0.5rem 0;
+  padding: 0.5rem 0 0;
   color: #d7dde9;
 }
 
@@ -34,13 +34,14 @@
 }
 
 .caption {
-  font-size: 2rem;
+  padding: 0.5rem 0;
+  line-height: 47px;
 }
 
 .hero p {
-  font-size: 1.2rem;
+  
   padding: 1rem 0rem;
-  line-height: 2.3rem;
+  line-height: 30px;
 }
 
 .hero a {
@@ -69,7 +70,8 @@
 
 @media screen and (min-width: 600px) {
   .hero h1 {
-    font-size: 5rem;
+    /* font-size: 5.5rem; */
+    line-height: 80px;
   }
 
   .hero .caption {
@@ -81,11 +83,13 @@
   }
 
   .hero {
-    padding: 2rem 10rem;
+    padding: 2rem 10rem 4rem;
+    margin-bottom: 5rem;
   }
 
   .hero p {
-    font-size: 1.7rem;
+    font-size: 24px;
+    line-height: 40px;
     padding: 1rem 0;
     width: 60%;
   }
