--- a/client/src/componenents/Projects/Project.module.css
+++ b/client/src/componenents/Projects/Project.module.css
@@ -8,37 +8,28 @@
 
 .projects {
   display: grid;
+  grid-gap: 0.5rem;
 }
 
 .project {
   position: relative;
   margin: 0.2rem;
-}
-
-.project > a {
+  width: 98%;
   height: 100%;
 }
 
-.project > a div {
+.project a {
   width: 100%;
   height: 100%;
-}
-
-.project > a div img {
-  height: 100%;
-  border-radius: 5px;
-}
-
-.project > a > div div {
-  border-radius: 5px;
-  height: 100%;
-  width: 100%;
 }
 
 .projectinfo {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background-color: var(--dark-grey-blue);
   color: var(--primary-text-color);
-  padding: 0rem 1rem;
+  padding: 0.5rem 1rem;
   height: 100%;
   width: 100%;
   position: absolute;
@@ -110,10 +101,9 @@
   border-radius: 5px;
 }
 
-.links a{
+.links a {
   margin-right: 0.3rem;
   margin-top: 0.2rem;
-
 }
 @media screen and (min-width: 600px) {
   .container {
@@ -121,6 +111,7 @@
   }
   .projects {
     grid-template-columns: repeat(3, 1fr);
+    grid-gap: 0.5rem 0rem;
   }
 }
 
