--- a/client/src/index.css
+++ b/client/src/index.css
@@ -50,6 +50,10 @@ html {
   padding: 1rem 0;
 }
 
+h1 {
+  font-size: 56px;
+}
+
 .title-container div {
   max-width: 90%;
   width: 1000px;
@@ -78,6 +82,6 @@ input:-webkit-autofill:active {
   }
 
   h1 {
-    font-size: 58px;
+    font-size: 40px;
   }
 }
