--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,7 +15,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Quicksand", sans-serif;
+  font-family: "Nunito Sans", sans-serif;
 }
 
 button {
