--- a/client/src/componenents/ImageWithOverlay/ImageWithOverlay.module.css
+++ b/client/src/componenents/ImageWithOverlay/ImageWithOverlay.module.css
@@ -1,20 +1,24 @@
 .wrapper {
   width: 100%;
   height: 100%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
   position: relative;
 }
 
 .wrapper img {
-  width: 100%;
-  height: 100%;
+  width: 98%;
+  height: 180px;
   object-fit: cover;
   border-radius: 5px;
 }
 
 .overlay {
   position: absolute;
-  height: 100%;
-  width: 100%;
+  height: 180px;
+  width: 98%;
   top: 0%;
   bottom: 0%;
   right: 0%;
