--- a/client/src/componenents/About/About.module.css
+++ b/client/src/componenents/About/About.module.css
@@ -8,22 +8,19 @@
 
 .about p {
   padding: 0.5rem 0;
-  line-height: 30px;
+  line-height: 26px;
+  font-size: 14px;
 }
 
 @media screen and (min-width: 600px) {
   .about {
     padding: 2rem 10rem;
   }
-
-  /* .about p {
-    line-height: 2rem;
-  } */
 }
 
 @media screen and (min-width: 600px) and (max-width: 1000px) {
   .about {
-    padding: 10rem 5rem;
+    padding: 5rem 5rem;
   }
 
   .about p {
