--- a/client/src/componenents/Contact/Contact.module.css
+++ b/client/src/componenents/Contact/Contact.module.css
@@ -2,7 +2,7 @@
   padding: 2rem 1rem;
 }
 
-.wrapper p{
+.wrapper p {
   line-height: 30px;
 }
 
@@ -35,6 +35,7 @@
 
 .info .contact p {
   font-size: 0.7rem;
+  font-weight: 600;
 }
 
 .formcontainer form {
@@ -131,7 +132,7 @@
     padding: 5rem 10rem;
   }
 
-  .formtitle p{
+  .formtitle p {
     margin-bottom: 1.5rem;
   }
 
@@ -146,7 +147,7 @@
 
 @media screen and (min-width: 600px) and (max-width: 1000px) {
   .wrapper {
-    padding: 10rem 5rem;
+    padding: 5rem 5rem;
   }
 
   .formtitle p {
