--- a/client/src/componenents/Hero/Hero.module.css
+++ b/client/src/componenents/Hero/Hero.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   height: 80vh;
-  min-height: 900%;
+  min-height: 100%;
   max-height: 1800px;
   padding: 1rem 1rem 4rem;
   text-align: left;
@@ -12,7 +12,7 @@
 
 .hero h1 {
   font-size: clamp(40px, 8vw, 80px);
-  font-family: "Quicksand", sans-serif;
+ font-weight: 600;
 }
 
 .hero h1 div h1 {
@@ -50,7 +50,7 @@
   width: 10rem;
   text-align: center;
   display: block;
-  font-size: 1.1rem;
+  font-size: 1rem;
   color: var(--blue);
   border: 2px solid var(--blue);
   text-decoration: none;
@@ -99,6 +99,7 @@
   .hero {
     padding: 0rem 5rem;
     height: 1500px;
+    min-height: 700px;
     max-height: 85vh;
   }
 
