--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,7 +15,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Nunito Sans", sans-serif;
+  font-family: "Quicksand", sans-serif;
 }
 
 button {
@@ -29,12 +29,19 @@ img {
 }
 body {
   margin: 0;
-  font-family: "Nunito Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--black);
   color: var(--primary-text-color);
   line-height: 1.3;
+}
+
+p {
+  font-weight: 300;
+}
+
+h1 {
+  font-weight: 500;
 }
 
 html {
